src/test/ui/issue-20714.stderr
error[E0618]: expected function, found `G`
  --> $DIR/issue-20714.rs:14:13
   |
LL | struct G;
   | --------- `G` defined here
...
LL |     let g = G(); //~ ERROR: expected function, found `G`
   |             ^^^ not a function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
